Fix long username wrap

--- a/app/assets/stylesheets/_cars.less
+++ b/app/assets/stylesheets/_cars.less
@@ -337,6 +337,9 @@
     .user {
       font-size: 18px;
       color: #000;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
     }
 
     .pull-left {
